--- a/src/assets/view.css
+++ b/src/assets/view.css
@@ -8,7 +8,7 @@ body {
 .board {
   display: grid;
   width: 700px;
-  grid-template-rows: repeat(7, 100px);
+  grid-template-rows: repeat(1, 700px);
   grid-template-columns: repeat(7, 100px);
   border: 10px solid rgb(6, 62, 114);
   border-radius: 5px;
@@ -26,6 +26,15 @@ body {
   font-size: 50px;
   font-weight: bold;
   cursor: pointer;
+}
+
+.column {
+  display: grid;
+}
+
+.column:hover {
+  background-color: rgba(255, 255, 255, 0.164);
+  transition: 0.1s;
 }
 
 .red-cell {
